# HeXO

./: Cargo.toml  README.md
ai/: Cargo.toml
ai/src/: lib.rs
app/: Cargo.toml
app/src/: app_state.rs  controller.rs  coords.rs  input.rs  main.rs  render.rs  sidebar.rs
docs/: design.md
