[workspace]
resolver = "3"
members = ["app", "ai"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
hexo-engine = { path = "../hexo-engine/hexo-engine" }
egui = "0.32"
eframe = "0.32"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
